--- a/Capstone/scss/_large.scss
+++ b/Capstone/scss/_large.scss
@@ -161,7 +161,7 @@ footer{
 }
 
 .outer button{
-    left: 3.75rem;
+    padding: .2rem 1rem;
 }
 
 .inner h3{
