--- a/Capstone/scss/_small.scss
+++ b/Capstone/scss/_small.scss
@@ -242,9 +242,10 @@ text-align: center;
     border-radius: .5rem;
     padding: .3rem 3rem;
     font-size: 1rem;
-    position: absolute;
-    bottom: 1rem;
-    left: 1.7rem;
+    margin-top: 1rem;
+    // position: absolute;
+    // bottom: 1rem;
+    // left: 1.7rem;
     cursor: pointer;
 }
 
